RESOLVED FIXED109202
[BlackBerry] Cookie database isn't loaded into memory in some rare cases
https://bugs.webkit.org/show_bug.cgi?id=109202
Summary [BlackBerry] Cookie database isn't loaded into memory in some rare cases
otcheung
Reported 2013-02-07 09:13:00 PST
If we get into a state where the get/setcookie calls are called before the database is loaded in the first async call, reload the cookie database using a sync call to make sure it's loaded properly.
Attachments
Patch (8.87 KB, patch)
2013-02-07 09:15 PST, otcheung
no flags
otcheung
Comment 1 2013-02-07 09:15:56 PST
Yong Li
Comment 2 2013-02-07 09:23:48 PST
Comment on attachment 187126 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=187126&action=review > Source/WebCore/platform/blackberry/CookieDatabaseBackingStore/CookieDatabaseBackingStore.cpp:322 > + if (isCurrentThread()) > + BlackBerry::Platform::webKitThreadMessageClient()->dispatchSyncMessage(createMethodCallMessage(&CookieManager::getBackingStoreCookies, &cookieManager())); > + else > + cookieManager().getBackingStoreCookies(); I'm not sure this is right. we send message when it is current thread? maybe we want the opposite?
Yong Li
Comment 3 2013-02-07 09:25:51 PST
Comment on attachment 187126 [details] Patch never mind
WebKit Review Bot
Comment 4 2013-02-07 09:27:04 PST
Comment on attachment 187126 [details] Patch Rejecting attachment 187126 [details] from commit-queue. otcheung@rim.com does not have committer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Review Bot
Comment 5 2013-02-07 10:25:45 PST
Comment on attachment 187126 [details] Patch Clearing flags on attachment: 187126 Committed r142150: <http://trac.webkit.org/changeset/142150>
WebKit Review Bot
Comment 6 2013-02-07 10:25:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.